# cocoutils

./: LICENCE  README.md  pyproject.toml
cocoutils/: cli.py
cocoutils/convert/: __init__.py  converter.py  core.py
cocoutils/health/: __init__.py  checker.py  formatters.py
cocoutils/merge/: __init__.py  core.py
cocoutils/reconstruct/: __init__.py  core.py
cocoutils/split/: __init__.py  splitter.py
cocoutils/utils/: __init__.py  categories.py  geometry.py  io.py
cocoutils/visualise/: __init__.py  visualizer.py
examples/: health_check_examples.py
tests/: test_categories.py  test_convert.py  test_convert_dummy.py  test_geometry.py  test_health.py  test_imports.py  test_io_json.py  test_io_tiff.py  test_merge.py  test_merge_dummy.py  test_reconstruct.py  test_reconstruct_dummy.py  test_split.py  test_visualise.py  test_visualise_dummy.py  test_visualize_masked.py
