[tool.poetry]
name = "cocoutils"
version = "0.2.2"
description = "A toolkit for COCO annotation generation, conversion, merging, and visualisation."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = ">=0.9"}
numpy = "*"
tifffile = "*"
tqdm = "*"
scipy = "*"
scikit-image = "*"
shapely = "*"
pycocotools = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
cocoutils = "cocoutils.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
